--- a/index.html
+++ b/index.html
@@ -15,6 +15,65 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <!-- header section  -->
+    <header class="container-fluid">
+      <nav
+        class="navbar navbar-expand-lg bg-body-tertiary sticky-top py-4 my-3 shadow"
+      >
+        <div class="container">
+          <a class="navbar-brand fs-4" href="#">Demo Website</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item me-5">
+                <a class="nav-link fs-5" aria-current="page" href="#"
+                  >Feature</a
+                >
+              </li>
+              <li class="nav-item me-5">
+                <a class="nav-link fs-5" href="#">Download</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link btn background-gradient rounded-pill text-white px-3 fs-5"
+                  href="#"
+                >
+                  <i class="fa-regular fa-comment-dots me-2"></i>
+                  Send Feedback</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- main section  -->
+    <main class="container-fluid">
+      <!-- banner section  -->
+      <section class="banner">
+        <div class="conatiner">
+          <div class="row">
+            <div class="clo-12 col-md-6"></div>
+            <div class="clo-12 col-md-6">
+              <div class="banner-image">
+                <img src="images/" alt="" class="img-fluid" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <!-- bootstrap js cdn  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
