adding banner section

--- a/index.html
+++ b/index.html
@@ -60,13 +60,48 @@
     <!-- main section  -->
     <main class="container-fluid">
       <!-- banner section  -->
-      <section class="banner">
-        <div class="conatiner">
-          <div class="row">
-            <div class="clo-12 col-md-6"></div>
-            <div class="clo-12 col-md-6">
-              <div class="banner-image">
-                <img src="images/" alt="" class="img-fluid" />
+      <section class="banner mt-5">
+        <div class="container">
+          <div class="row h-100">
+            <div class="col-md-6">
+              <div
+                class="banner-description d-flex flex-column justify-content-center align-items-start h-100"
+              >
+                <h1 class="fw-bold text-blue">
+                  Showcase your app
+                  <span class="text-purple">beautifully</span>.
+                </h1>
+                <p class="fs-5 fw-medium">
+                  Launch your mobile app landing page faster with this free,
+                  open source theme from Start Bootstrap!
+                </p>
+                <div class="banner-button">
+                  <a href="">
+                    <img
+                      src="images/image/google-play.png"
+                      alt="google-play-store"
+                      class="img-fluid"
+                    />
+                  </a>
+                  <a href="">
+                    <img
+                      src="images/image/app-store.png"
+                      alt="app-store"
+                      class="img-fluid"
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div
+                class="banner-image d-flex justify-content-center align-items-center"
+              >
+                <img
+                  src="images/image/banner.png"
+                  alt="phone"
+                  class="img-fluid"
+                />
               </div>
             </div>
           </div>
