adding our-moto section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,22 @@
           </div>
         </div>
       </section>
+      <!-- out-moto section      -->
+      <section class="our-moto background-gradient">
+        <div
+          class="container d-flex flex-column justify-content-center align-items-center py-5"
+        >
+          <p class="text-white text-center fs-2 w-50">
+            "An intuitive solution to a common problem that we all face, wrapped
+            up in a single app!"
+          </p>
+          <img
+            src="images/icon/tnw-logo.svg"
+            alt="tnw logo"
+            class="img-fluid"
+          />
+        </div>
+      </section>
     </main>
 
     <!-- bootstrap js cdn  -->
